KOSTRAIT-284 Remove dead code